Update NumberUtils.java
Replace calling the constructor of Number classes by calling valueOf method.